[tool.poetry]
name = "constructor"
version = "0.1.0"
description = ""
authors = ["Ivan Mikhailov <mikhailov.ivan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.11.0"
scipy = "1.9.3"


[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
mypy = "^1.0.1"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "constructor"


